--- a/src/app/pages/homePage/homePageStyle.scss
+++ b/src/app/pages/homePage/homePageStyle.scss
@@ -15,74 +15,92 @@
     display: flex;
     align-items: center;
     padding: 150px 0px 100px;
+
     @media (max-width: 1200px) {
         padding: 120px 0px 80px;
     }
+
     .contentWrap {
         h2 {
             font-weight: 700;
             margin-bottom: 30px;
-    
+
             @media (max-width: 1200px) {
                 margin-bottom: 15px;
             }
         }
     }
-    
+
 }
 
 
 
 // ********************tabs-start***************************
-.tab_list {
-    box-shadow: none !important;
-    padding-top: 20px;
+
+.side_custom_tabs{
+    .tab_list {
+        box-shadow: none !important;
+        padding-top: 20px;
+        .tab_btn {
+            padding: 10px 20px 10px 100px;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            width: 100%;
+            color: var(--text-color-dark);
+            position: relative;
+            border-radius: 10px;
+            margin: 5px 0px;
+            min-height: 80px;
+
+            // border: 1px solid #ddd;
+            &:hover{
+                background: #ffffff;
+            }
+            &.Mui-selected{
+                box-shadow: 0px 10px 60px rgba(3, 17, 44, .15);
+                background-color: var(--bg-color3);
+                .tabInfo{
+                    overflow: visible;
+                    -webkit-line-clamp: 4;
+                }
+            }
+            &::after{
+                display: none;
+            }
+            .tabImage{
+                position: absolute;
+                left: 00px;
+                top:20px;
+                text-align: center;
+                width: 100px;
+            }
+            .tabTitle {
+                font-size: 20px;
+                margin-bottom: 5px;
+                font-weight: 600;
+                width: 100%;
+                margin: 0;
+            }
+            .tabInfo{
+                font-weight: 400;
+                font-size: 15px;
+                margin-bottom: 0;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                display: -webkit-box;
+                overflow: hidden;
+                transition: all ease-in-out .3s;
+            }
+        }
+    }
 }
+
 
 .margin_top_992 {
     @media (max-width: 992px) {
         margin-top: 40px;
     }
-}
-
-.tab_btns {
-    padding: 20px;
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
-    background-color: var(--bg-color3) !important;
-    color: var(--text-color-dark);
-
-    h2 {
-        font-size: 20px;
-        margin-bottom: 5px;
-        font-weight: 600;
-    }
-
-    p {
-        font-weight: 400;
-        font-size: 16px;
-        margin-bottom: 0;
-        // -webkit-line-clamp: 2;
-        // -webkit-box-orient: vertical;
-        // display: -webkit-box;
-        // overflow: hidden;
-    }
-}
-
-.css-1mad5hb-JoyTab-root[aria-selected="true"],
-.css-1q8wenp-JoyTab-root[aria-selected="true"] {
-    box-shadow: 0px 10px 60px rgba(3, 17, 44, .15);
-    padding: 20px;
-    background-color: var(--bg-color3);
-    color: var(--text-color-dark);
-    border-radius: 10px;
-    z-index: 1;
-}
-
-.css-1q8wenp-JoyTab-root::after,
-.css-1mad5hb-JoyTab-root::after {
-    background-color: transparent !important;
 }
 
 .css-64esqk-JoyTabPanel-root {
@@ -97,23 +115,13 @@
 .custom_tab_design .css-d3v7oa-JoyTabs-root {
     background-color: transparent !important;
 }
-.custom_tab_design .css-64esqk-JoyTabPanel-root{
+
+.custom_tab_design .css-64esqk-JoyTabPanel-root {
     @media (max-width: 1200px) {
-       padding: 0%;
+        padding: 0%;
     }
 }
 
-.custom_tab_design .tab_list {
-    box-shadow: none;
-    border-bottom: 1px solid #d0d0d3;
-    border-top: 1px solid #d0d0d3;
-    margin-bottom: 30px;
-
-    @media (max-width: 767.95px) {
-        border: none;
-        padding: 0;
-    }
-}
 
 .custom_tab_design .tab_img {
     max-width: 40px;
@@ -153,6 +161,7 @@
         border-left: none;
         border-bottom: 3px solid #d0d0d3;
     }
+
     @media (max-width:400px) {
         padding: 10px;
         font-size: 13px;
