--- a/src/app/header/headerStyle.scss
+++ b/src/app/header/headerStyle.scss
@@ -74,13 +74,13 @@
                         }
                     }
                     .megaMenuWrapper {
-                        padding-top: 50px;
+                        padding-top: 40px;
                         position: absolute;
                         top: 00px;
-                        left: -100px;
+                        left: -150px;
                         background-color: transparent;
                         .megaMenuWrap {
-                            width: 810px;
+                            width: 820px;
                             padding: 8px;
                             box-shadow: 0 0 50px 0 rgba(0, 0, 0, .25);
                             z-index: 9 !important;
@@ -99,36 +99,39 @@
                             
                                 .data_box_col {
                                     width: 100%;
-                                    max-width: 530px;
-                                    max-height: 250px;
-                                    padding: 10px 0;
+                                    max-width: calc(100% - 285px);
+                                    max-height: 235px;
                                     border-radius: 10px;
-                                    display: flex;
-                                    flex-wrap: wrap;
-                                    gap: 10px;
+                                    display: grid;
+                                    grid-template-columns: repeat(2, 1fr);
+                                    grid-gap: 5px 10px;
+                                    gap: 5px 10px;
                                     overflow: auto;
-                            
+
+
                                 }
                             
                                 .child_hover_btn {
-                                    padding: 10px 15px;
+                                    padding: 20px 15px;
                                     border-radius: 10px;
                                     cursor: pointer;
                                     transition: all ease-in-out 0.3s;
+                                    background-color: #f5f5f5;
                             
                                     h6 {
                                         font-weight: 600;
                                         color: var(--text-color-dark);
-                                        margin-bottom: 5px;
+                                        margin-bottom: 0px;
+                                        font-size: 17px;
                                     }
                             
-                                    p {
-                                        font-weight: 400;
-                                        color: #000;
-                                        opacity: 0.6;
-                                        line-height: 20px;
-                                        margin: 0;
-                                    }
+                                    // p {
+                                    //     font-weight: 400;
+                                    //     color: #000;
+                                    //     opacity: 0.6;
+                                    //     line-height: 20px;
+                                    //     margin: 0;
+                                    // }
                             
                                     &:hover {
                                         background-color: var(--bg-color3);
@@ -137,45 +140,44 @@
                                 }
                             
                                 .active_tab {
-                                    background-color: var(--bg-color3);
+                                    background-color:#fff;
                                     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
                                 }
                             
                                 .child_hover_data {
-                                    padding: 6px 10px;
-                                    width: 230px;
+                                    padding: 12px 10px;
                                     border-radius: 6px;
                                     display: flex;
-                                    margin-left: 10px;
                                     align-items: center;
                                     text-decoration: none;
                                     cursor: pointer;
-                                    &:hover{
-                                        background-color: var(--bg-color2);
+                                    background-color: #f5f5f5;
+                                     &:hover{
+                                        background-color:#fff;
+                                        box-shadow: 0px 0px 5px 0px #00000015;
                                     }
-                            
+
                                     h6 {
                                         font-weight: 600;
                                         color: var(--text-color-dark);
                                         margin-bottom: 0px;
                                         text-transform: capitalize;
-                                        text-overflow: ellipsis;
-                                        white-space: nowrap;
+                                        // text-overflow: ellipsis;
+                                        // white-space: nowrap;
                                         overflow: hidden;
-                                        width: 160px;
                                     }
                             
-                                    p {
-                                        font-weight: 400;
-                                        color: #000;
-                                        opacity: 0.6;
-                                        line-height: 20px;
-                                        margin: 0;
-                                        text-overflow: ellipsis;
-                                        white-space: nowrap;
-                                        overflow: hidden;
-                                        width: 160px;
-                                    }
+                                    // p {
+                                    //     font-weight: 400;
+                                    //     color: #000;
+                                    //     opacity: 0.6;
+                                    //     line-height: 20px;
+                                    //     margin: 0;
+                                    //     text-overflow: ellipsis;
+                                    //     white-space: nowrap;
+                                    //     overflow: hidden;
+                                    //     width: 160px;
+                                    // }
                             
                                 }
                             
@@ -299,16 +301,6 @@
     p{
         text-decoration: underline;
     }
-}
-.over_flow{
-    overflow-y: auto;
-    padding: 16px 0;
-}
-.max_text_200{
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    max-width: 140px;
 }
 
 .close_button {
